# PagInCryptoTelegramBot

./: .env.example  .gitignore  Cargo.toml  dockerfile  main_old
.sqlx/: query-0624af40b4787b0ae4d486fc3088a9763473c3c95b225345ce6285d4b882c3ad.json  query-2c0d000b87154dafe0991fb27b62e7b6be166b3221040c002af2d8a757989b5c.json  query-356e09f7a7b120caf39543680b63f68ba72799da86f3ec431811a359401997d4.json  query-36163992c84f5b3d3cbfd39ac6f37748ef64d5490091995ed6148cc0086f3743.json  query-4929c80d8f7e4c82649d0f5ec7a1f0cd7f44d310340437315df7558db09f4ef9.json  query-4a55e98229834aeda4dc4b542f96a908d85af144dee1c0b003fddda1e465f58f.json  query-54fb62d99da8d0640070e22c3e435ae71a28722ddc4e902f4c88a6ef36b4e9ea.json  query-55e00f356375f0949eaf3b4b48d83d438e7e67e20b6a11a567c06f9868744289.json  query-6aa9df5603b321b8edc6660305e1eeab59d54aedeefcaad6f7738f7c05fde833.json  query-6d4d2184d5ed1ec044b7f143252731a36254128464016599dd4c5fd71bec1bad.json  query-758ee3afb865db6b42450ee1a491070bde8904e54d1ba5f31ad7fbee5a497e1f.json  query-7cf0a522342d6db865bd0fa7f2cc55797e7aa81299cab9ddaf0e191df8ca71ae.json  query-a7e686bff11f6b90d3d78f13301404756f1d590aaa160e3c0847d4059f75b8ba.json  query-b040bbc81025c1c3667a022f56dd242f081089151a9692813b49a6c852ed7780.json  query-cb3d88e7f3d515a0371ebeb62634feb1b20b37ee06c0ab21006491ea559ddd9e.json  query-d00e84e1cbbe20be084a41ab102fc2dce1d51d0a68c430c8f1e2fe7269e8559b.json  query-e2c59ff7ac2d5362abcfa87f7a352e819833bc0d122ec030f8983f24750c9e2b.json  query-ff1bc73fb46b7b46f119c2c2f913b55ac3af6a483af802f5129151f55aadf7bd.json
src/: main.rs
