[package]
name = "PagInCryptoBot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
dotenv = "0.15.0"
axum = "0.8.4"
hyper = "1.7.0" 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper-rustls"] }
log = "0.4.27"